Fix layout issue

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -49,6 +49,5 @@ body {
     position: absolute;
     top: 50px;
     bottom: 0;
-    height: 100%;
     width: 100%;
 }
